adding encoding  a file and then upload it on drive

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ __pycache__/service.cpython-38.pyc
 credentials/credentials.json
 pydrive/GUI.py
 .vscode
+pydrive/__pycache__/service.cpython-37.pyc
+pydrive/__pycache__/context.cpython-37.pyc
